# src/routes/community.routes.js
@@ -1,0 +1,6 @@
+const router=require("express").Router()
+const routes=require("../controllers/community/community.controller")
+
+router.post("/new",routes.createCommunity)
+
+module.exports=router
